k8s-demo-backend/overlays/qa/patches/rollouts.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: k8s-demo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-demo-backend
  template:
    metadata:
      labels:
        app: k8s-demo-backend
    spec:
      containers:
        - name: k8s-demo-backend
          image: "k8s-demo-backend:latest"
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          env: []
          resources:
            limits:
              cpu: 500m
              memory: 2500Mi
            requests:
              cpu: 200m
              memory: 1500Mi
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause:
            duration: 10s
        - setWeight: 100
